Remove itemize part

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -85,41 +85,17 @@
     本研究では、このReddit上で観察される投稿数や感情の変化、議論のトピックの移り変わりを分析し、現代の紛争がデジタル空間でどのように議論されるのかを探る。
 
     \section{研究目的}
-    本研究の目的は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応にどのような影響を与えたかを明らかにすることである。本研究は以下の3つの観点に焦点を当てる: 
-
-    \begin{enumerate}
-        \item 投稿数の変動: 紛争の発生が投稿数にどのような変化をもたらしたかを分析し、議論の活性化や関心の高まりを評価する。
-        \item 感情的傾向の変化: 感情分析を用いて、紛争に対するユーザーの反応がどのように変化したかを明らかにする。
-        \item トピックの変遷: 動的トピックモデリング（DTM）を活用し、議論が紛争直後の急性期からその後の段階にかけてどのように展開したかを時系列で追跡する。
-    \end{enumerate}
-
-    本研究は、SNSが国際紛争に与える影響を総合的に理解することを目指し、データ駆動型の分析手法を駆使して、以下の独自性を持つ知見を提供する: 
-
-    \begin{enumerate}
-        \item Redditという匿名性と分散型構造を持つプラットフォームの特性に着目し、これが国際紛争の議論に与える影響を詳細に分析する。
-        \item 投稿数やセンチメントスコアの分析に加え、トピックモデリングを用いることで、SNS上の議論がどのようにテーマを移行させていくかを具体的に明らかにする。
-        \item サブサンプリングや差分の差分（DID）分析を活用し、介入（紛争発生）が議論の量的および質的側面に与える影響を因果的に評価する。
-    \end{enumerate}
+    本研究の目的は、2024年10月1日に発生したイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応にどのような影響を与えたかを明らかにすることである。具体的には、投稿数の変動、感情的傾向の変化、トピックの変遷という三つの観点からこの影響を分析する。紛争の発生が投稿数にどのような変化をもたらしたのかを評価することで、議論の活性化や関心の高まりを測定する。また、感情分析を用いて紛争に対するユーザーの反応が時間とともにどのように変化したのかを明らかにする。そして、動的トピックモデリング（DTM）を活用することで、議論が紛争直後の急性期からその後の段階に至るまでどのように展開したのかを時系列で追跡する。
+    
+    さらに、本研究はRedditという匿名性と分散型構造を持つSNSプラットフォームの特性に着目し、この特性が国際紛争に関する議論に与える影響を詳細に分析することを目指す。投稿数や感情スコアの分析に加え、トピックモデリングを活用することで、議論がどのようにテーマを移行させていくのかを具体的に示す。また、サブサンプリングや差分の差分（DID）分析を用いることで、紛争発生という介入が議論の量的および質的側面にどのような因果的影響を与えるのかを評価する。これらの分析を通じて、SNSが国際紛争に与える影響を総合的に理解するためのデータ駆動型の知見を提供する。
+    
+    本研究は、Redditという特異なプラットフォームにおける議論のダイナミクスを解明することで、デジタル時代の国際紛争におけるSNSの役割を理解するための新たな知見を提供することを目指している。また、この研究は、政策立案者や国際機関がデジタル空間を活用する際の参考となり得る重要な示唆を含むものである。
 
     \section{本論文の仮説}
-    本研究では、以下の仮説を検証する: 
-    \begin{enumerate}
-        \item \textbf{投稿数の増減}: イスラエルによるレバノン侵攻は、紛争関連サブレディットにおける投稿数を急増させる一方で、対照群では投稿数の変化が限定的である。
-        \item \textbf{投稿内容の過激化}: 紛争直後、投稿内容はネガティブかつ感情的な傾向を示し、センチメントスコアが低下する。
-        \item \textbf{トピックの変遷}: 紛争に関する議論は、発生直後には戦闘や人道危機に集中し、時間の経過とともに国際支援や解決策の模索へと焦点が移る。
-    \end{enumerate}
-
+    本研究では、以下の三つの仮説を検証する。まず、イスラエルによるレバノン侵攻が紛争関連サブレディットにおける投稿数を急増させる一方で、対照群では投稿数の変化が限定的であると考えられる。次に、紛争直後に投稿内容はネガティブかつ感情的な傾向を示し、センチメントスコアが低下すると仮定する。最後に、紛争に関する議論は、発生直後には戦闘や人道危機に集中し、時間の経過とともに国際支援や解決策の模索へと焦点が移ると想定する。
+    
     \section{本論文の構成}
-    本論文は以下の構成をとる: 
-    \begin{itemize}
-        \item 第2章: SNSにおける世論形成と国際紛争に関する先行研究のレビューを行い、Redditの特性について議論する。
-        \item 第3章: データ収集および分析手法を説明し、投稿数、センチメントスコア、トピックの変化を調査するための具体的な方法論を提示する。
-        \item 第4章: 分析結果を提示し、紛争がReddit上の議論に与える影響を示す。
-        \item 第5章: 結果を解釈し、SNSが国際紛争における世論形成や情報拡散に果たす役割について考察する。
-        \item 第6章: 本研究の結論をまとめ、今後の課題と研究の展望を示す。
-    \end{itemize}
-
-    本研究は、Redditという特異なプラットフォームにおける議論のダイナミクスを解明することで、デジタル時代の国際紛争におけるSNSの役割を理解するための新たな知見を提供することを目指している。この研究は、政策立案者や国際機関がデジタル空間を活用する際の参考となり得る重要な示唆を含んでいる。
+    本論文は以下の構成をとる。第2章では、SNSにおける世論形成と国際紛争に関する先行研究をレビューし、Redditの特性について議論する。第3章では、データ収集および分析手法を詳述し、投稿数、センチメントスコア、トピックの変化を調査するための具体的な方法論を提示する。第4章では、分析結果を提示し、紛争がReddit上の議論に与える影響を示す。第5章では、結果を解釈し、SNSが国際紛争における世論形成や情報拡散に果たす役割について考察する。第6章では、本研究の結論をまとめ、今後の課題と研究の展望を示す。
 
     \chapter{SNSにおける世論形成と国際紛争に関する先行研究}
 
