--- a/docs/main.tex
+++ b/docs/main.tex
@@ -38,7 +38,7 @@
         \vspace{\baselineskip}
         \vspace{40mm}
 
-        {\Large\noindent \vspace{\baselineskip} 指導教員 﨑\CID{8443}田智子 \\ \vspace{\baselineskip} グローバル地域文化学部 アジア・太平洋コース \\ \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\ }
+        {\Large\noindent \vspace{\baselineskip} 指導教員 \CID{8443}田智子 \\ \vspace{\baselineskip} グローバル地域文化学部 アジア・太平洋コース \\ \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\ }
         \vspace{40mm}
     \end{center}
 
