Use & instead of hiragana

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -107,11 +107,11 @@
     さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott \& Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
-    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。HowardとHussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
+    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。Howard \& Hussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
 
     さらに、SNSは国際的な議論を加速させるツールとしても機能している。イスラエルとパレスチナの紛争では、世界中のユーザーがSNSを通じて意見を発信し、国際世論が紛争当事者への外交的プレッシャーとして作用するケースが見られる。これにより、SNSは紛争解決や国際支援のプロセスに間接的な影響を及ぼしている。
 
-    BennettとSegerberg（2012）は、SNSが「ネットワーク化された個人的行動」を促進し、従来の組織化された抗議活動よりも分散的で迅速な動員を可能にすると述べている。この視点は、SNSが国際紛争の文脈において、情報共有だけでなく、個人の行動を直接的に動員する力を持つことを示唆している。
+    Bennett \& Segerberg（2012）は、SNSが「ネットワーク化された個人的行動」を促進し、従来の組織化された抗議活動よりも分散的で迅速な動員を可能にすると述べている。この視点は、SNSが国際紛争の文脈において、情報共有だけでなく、個人の行動を直接的に動員する力を持つことを示唆している。
 
     \section{Redditの特異性}
     Redditは他のSNSと比較して匿名性が高く、ユーザーが特定のトピックに関心を持つコミュニティ（サブレディット）に参加することで、多様な意見交換が可能となるプラットフォームである。Massanari（2015）は、Redditの匿名性と分散型構造が、多様な視点を反映した議論を促進すると指摘している。また、「アップボート」「ダウンボート」の評価システムは、特定の意見が可視化される一方で、少数派の意見も一定の支持を得て拡散される可能性を持つ。
