Improve writing of chapter 2nd

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -116,34 +116,34 @@
     \section{Redditの特異性}
     Redditは他のSNSと比較して匿名性が高く、ユーザーが特定のトピックに関心を持つコミュニティ（サブレディット）に参加することで、多様な意見交換が可能となるプラットフォームである。Massanari（2015）は、Redditの匿名性と分散型構造が、多様な視点を反映した議論を促進すると指摘している。また、「アップボート」「ダウンボート」の評価システムは、特定の意見が可視化される一方で、少数派の意見も一定の支持を得て拡散される可能性を持つ。
 
-    特に、国際紛争に関する議論では、サブレディットごとに異なる視点が展開されることが多い。たとえば、「r/worldnews」ではグローバルな視点からの議論が行われる一方、「r/Israel」や「r/palestine」では地域特有の視点が強調される。GaffneyとMatias（2018）の研究によれば、Redditのコメントシステムは階層的な議論構造を生み出し、紛争の複雑な側面に関する多層的な議論を可能にしている。この特徴は、他のSNSでは観察されにくいReddit特有の性質といえる。
+    特に、国際紛争に関する議論では、サブレディットごとに異なる視点が展開されることが多い。たとえば、「r/worldnews」ではグローバルな視点からの議論が行われる一方、「r/Israel」や「r/palestine」では地域特有の視点が強調される。Gaffney \& Matias（2018）の研究によれば、Redditのコメントシステムは階層的な議論構造を生み出し、紛争の複雑な側面に関する多層的な議論を可能にしている。この特徴は、他のSNSでは観察されにくいReddit特有の性質といえる。
 
     さらに、Mills（2018）は、Redditのサブレディットが「想像の共同体」として機能する点を指摘しており、特定のイデオロギーや価値観を共有するユーザー間の結束を強化する傾向がある。この点は、Redditが紛争に関する議論においてどのように偏りを生じさせる可能性があるかを示唆している。
 
     \section{先行研究との関係}
-    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、Shirky（2011）やHowardとHussain（2013）は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、Zeitzoff（2017）はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
+    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、Shirky（2011）やHoward \& Hussain（2013）は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、Zeitzoff（2017）はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
 
-    本研究は、これらの先行研究に対して以下の3つの点で独自性を持ち、学術的意義を提供する。
+    本研究は、これらの先行研究に対して以下の3つの点の視点を示すという、学術的意義を有する。
 
-    \subsection*{1. Redditという未開拓プラットフォームへの着目}
+    \subsection{Redditという未開拓プラットフォームへの着目}
     既存の研究の多くがTwitterやFacebookといった既成のSNSに焦点を当てている中で、本研究はRedditという匿名性が高く、分散型構造を持つプラットフォームを対象としている。Redditの特異性は、サブレディットというコミュニティ構造と、ユーザーがコンテンツを評価する投票システムにある。この特徴は、議論が多様な視点を含む形で展開される可能性を高める一方で、議論の偏りや極化を生むリスクも持つ。Massanari（2015）が示すように、Redditの評価システムは、少数意見や論争的な意見の可視性を保証する仕組みとして機能しており、これが世論形成に与える影響は他のSNSとは一線を画す。
 
     特に、本研究は、イスラエル・レバノン紛争という具体的な国際事件を題材に、Reddit上での議論のダイナミクスを分析することで、このプラットフォームが国際紛争に関連する世論形成や情報拡散に与える独自の影響を明らかにする。
 
-    \subsection*{2. データ駆動型アプローチの統合}
-    従来のSNS研究では、投稿数の変化や感情分析を用いた傾向の把握が主流であった。本研究ではこれらの手法に加え、動的トピックモデリング（DTM）を用いた議論のテーマの変遷分析を組み合わせることで、議論の量的変化だけでなく、その質的側面を時系列的に明らかにすることを試みている。
+    \subsection{データ駆動型アプローチの統合}
+    従来のSNS研究では、投稿数の変化や感情分析を用いた傾向の把握が主流であった。本研究ではこれらの手法に加え、動的トピックモデリング（DTM）を用いた議論のテーマの変遷分析を組み合わせることで、議論の量的変化だけでなく、その質的側面を時系列的に明らかにすることを試みる。
 
-    具体的には、投稿数の急増やセンチメントスコアの変化を検出するだけでなく、DTMを活用して、議論が「戦闘」「人道危機」「国際支援」などのトピックにどのように分布し、時間の経過とともにどのように移行していくかを分析した。この手法により、投稿者の関心がどの時点で特定のテーマに集中し、その後どのように新たなトピックへと推移していくかを詳細に把握することが可能となる。
+    具体的には、投稿数の急増やセンチメントスコアの変化を検出するだけでなく、DTMを活用して、議論が「戦闘」「人道危機」「国際支援」などのトピックにどのように分布し、時間の経過とともにどのように移行していくかを分析する。この手法により、投稿者の関心がどの時点で特定のテーマに集中し、その後どのように新たなトピックへと推移していくかを詳細に把握することが可能となる。
 
     特に、紛争直後における投稿数や感情の急激な変化が、どのようなテーマと関連しているのかを検討することで、SNS上の議論形成のダイナミクスをより深く理解するための基盤を提供する。本研究のように量的データ（投稿数やセンチメントスコア）と、トピックという質的側面を統合的に分析するアプローチは、SNS研究における新たな視点を提供するとともに、議論の全体像をより包括的に捉えることに寄与する。
 
-    \subsection*{3. 国際紛争とオンライン世論の関係性への新たな知見}
-    既存研究では、SNSが国際紛争において果たす役割が、情報拡散やプロテスタントの動員といった「直接的な効果」に焦点を当てることが多かった。一方で、本研究は、Reddit上の議論が紛争当事者への国際的な支持や批判を形成するだけでなく、SNS利用者同士の議論の焦点やトーンがどのように変化し、SNS全体の議論空間に影響を与えるかを検証している。具体的には、サブレディット間での視点の違いや、特定のテーマに対する議論の偏りが、紛争の認識や世論形成に与える影響を多角的に分析している。
+    \subsection{国際紛争とオンライン世論の関係性への新たな知見}
+    既存研究では、SNSが国際紛争において果たす役割が、情報拡散やプロテスタントの動員といった「直接的な効果」に焦点を当てることが多かった。一方で、本研究は、Reddit上の議論が紛争当事者への国際的な支持や批判を形成するだけでなく、SNS利用者同士の議論の焦点やトーンがどのように変化し、SNS全体の議論空間に影響を与えるかを検証する。具体的には、サブレディット間での視点の違いや、特定のテーマに対する議論の偏りが、紛争の認識や世論形成に与える影響を多角的に分析する。
 
-    また、Redditが持つ匿名性や分散型構造の特性が、議論の質や偏りにどのように影響するかについても考察することで、従来のSNS研究では見落とされてきた議論の「質的側面」に光を当てている。この点で、本研究は単なる議論の量的変化にとどまらず、その内容や構造の変化を深く掘り下げている。
+    また、Redditが持つ匿名性や分散型構造の特性が、議論の質や偏りにどのように影響するかについても考察することで、従来のSNS研究では見落とされてきた議論の「質的側面」に光を当てる。この点で、本研究は単なる議論の量的変化にとどまらず、その内容や構造の変化を深く掘り下げる。
 
-    \subsection*{4. SNS研究への学術的貢献と実践的意義}
-    本研究は、Redditという未開拓のプラットフォームを対象とすることで、SNS研究に新たな学術的貢献を提供している。また、紛争や国際問題における世論形成のプロセスを明らかにすることは、政策立案者や国際機関にとって、SNSを活用した情報戦略の策定やデジタルディプロマシーの構築に向けた実践的な示唆を提供する。
+    \subsection{SNS研究への学術的貢献と実践的意義}
+    本研究は、Redditという未開拓のプラットフォームを対象とすることで、SNS研究に新たな学術的貢献を提供する。また、紛争や国際問題における世論形成のプロセスを明らかにすることは、政策立案者や国際機関にとって、SNSを活用した情報戦略の策定やデジタルディプロマシーの構築に向けた実践的な示唆を提供する。
 
     \chapter{データ収集・分析手法}
     本章では、Redditにおける投稿データを対象としたデータ収集および分析手法について詳述する。本研究では、信頼性と精度を確保しつつ、大規模な投稿データを効率的に取得するために適切なデータ収集アプローチを採用した。さらに、収集したデータを用いて、投稿数の変化、センチメントスコアの推移、および議論のトピックの変遷を分析するための方法論を提示する。これにより、データ駆動型の手法が本研究の目的を達成する上でなぜ有効であるかを論じる。
