Not to use itemizing

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -163,38 +163,26 @@
 
     さらに、紛争の影響を定量的に評価するため、差分の差分（Difference-in-Differences, DID）分析を実施した。DIDは観察データに基づき介入（今回の場合は紛争勃発）が結果に与える因果的な影響を推定する手法であり、紛争関連サブレディットと対照群サブレディットの間での投稿数の変化を比較することで、介入の純粋な効果を明らかにすることが可能である。
 
-    \subsection*{サブサンプリングによるデータ調整}
-    分析対象となるデータでは、処置群（紛争関連サブレディット）の投稿数が対照群（非紛争関連サブレディット）と比較して大幅に多いことが確認された。このデータの不均衡は、DID分析における結果の偏りや推定値の信頼性低下を招く可能性があるため、以下の手順でサブサンプリングを行った:
-
-    \begin{enumerate}
-        \item 対照群サブレディットの日次投稿数の平均を基準とし、処置群からランダムに同数の投稿を抽出。
-        \item サブサンプリングは分析結果の安定性を確保するため、複数回（100回）繰り返し実施し、平均値を算出。
-        \item サブサンプリングによるデータ調整後、DIDモデルを適用。
-    \end{enumerate}
+    \subsection{サブサンプリングによるデータ調整}
+    分析対象となるデータでは、処置群（紛争関連サブレディット）の投稿数が対照群（非紛争関連サブレディット）と比較して大幅に多いことが確認された。このデータの不均衡は、DID分析における結果の偏りや推定値の信頼性低下を招く可能性がある。そのため、対照群サブレディットの日次投稿数の平均を基準として、処置群からランダムに同数の投稿を抽出するサブサンプリングを実施した。さらに、このサブサンプリングは分析結果の安定性を確保するために複数回（100回）繰り返し行われ、その平均値が算出された。最後に、サブサンプリングによって調整されたデータを用いてDIDモデルを適用した。
 
     このプロセスにより、処置群と対照群のデータ数の差を緩和し、DID分析における比較の公平性と信頼性を向上させた。この処理は後ほど説明する「感情分析とVADERスコアの時系列変化」でも同様に実施されている。
 
-    \textbf{DIDを用いる必要性}
-    DID分析を採用した理由は以下の通りである:
-    \begin{enumerate}
-        \item 介入の因果的影響を識別するため: 紛争勃発による投稿数の変化を単に観察するだけでは、紛争以外の要因（季節的な投稿数の変動、一般的なトレンドなど）が結果に影響を与えている可能性を排除できない。DIDは、紛争関連サブレディット（処置群）と、紛争と無関係なサブレディット（対照群）を比較することで、これらの外的要因を統制し、紛争の影響そのものを識別できる。
-        \item 差分の差分に基づく純粋な影響推定: DIDは、以下のステップで介入効果を分離する:
-            \begin{enumerate}
-                \item 介入前後で処置群（紛争関連サブレディット）の投稿数変化を計算。
-                \item 介入前後で対照群（非紛争関連サブレディット）の投稿数変化を計算。
-                \item 処置群と対照群の変化量を比較（差分の差分）することで、介入の純粋な影響を推定。
-            \end{enumerate}
-            これにより、紛争がなかった場合の投稿数変化（対照群の変化を基に推定）をコントロールしつつ、紛争の影響を明確にすることができる。
-        \item 観察データでの実践的有用性: DIDはランダム化実験が実施できない場合においても、因果推論を行うために広く用いられる手法である。今回のケースでは、紛争が自然発生的な事象であり、介入のタイミングを研究者が制御できないため、DIDは適切な分析手法といえる。
-    \end{enumerate}
-    \textbf{DIDモデルの仕様}
-    DID分析では、以下の回帰式を使用した:
+    \subsection{DIDを用いる必要性}
+    DID分析を採用した理由は三つある。まず、介入の因果的影響を識別するためである。紛争勃発による投稿数の変化を単に観察するだけでは、紛争以外の要因、例えば季節的な投稿数の変動や一般的なトレンドなどが結果に影響を与えている可能性を排除することはできない。DIDを用いることで、紛争関連サブレディット（処置群）と、紛争と無関係なサブレディット（対照群）を比較し、これらの外的要因を統制しつつ紛争の影響そのものを識別することが可能になる。
+    
+    次に、差分の差分に基づく純粋な影響推定を行える点である。DIDでは、まず介入前後で処置群（紛争関連サブレディット）の投稿数変化を計算し、次に介入前後で対照群（非紛争関連サブレディット）の投稿数変化を計算する。そして、処置群と対照群の変化量を比較（差分の差分）することで、介入の純粋な影響を推定する。これにより、紛争がなかった場合の投稿数変化を対照群の変化を基に推定し、それをコントロールすることで、紛争の影響を明確にすることができる。
+    
+    最後に、観察データに基づく実践的な有用性が挙げられる。DIDは、ランダム化実験が実施できない場合においても因果推論を行うために広く用いられる手法である。今回のケースでは、紛争が自然発生的な事象であり、介入のタイミングを研究者が制御できないため、DIDは適切な分析手法といえる。
+
+    \subsection{DIDモデルの仕様}
+    DID分析では、以下の回帰式を使用した。
 
     \begin{equation}
         Y_{it} = \beta_{0} + \beta_{1}*Treatment_{i} + \beta_{2}*Post_{t} + \beta_{3}*(Treatment_{i} * Post_{t}) + \epsilon_{it}
     \end{equation}
 
-    ここで、
+    この回帰式において、各パラメーターは以下のような意味を持つ。
     \begin{itemize}
         \item $Y_{it}$:日次投稿数（サブレディット$i$の時点$t$における投稿数）
         \item $Treatment_{i}$:紛争関連サブレディットであるか否か（1=処置群、0=対照群）
@@ -203,44 +191,35 @@
         \item $\beta_{3}$:紛争の影響を表す推定値
     \end{itemize}
 
-    \textbf{DIDの意義と期待される結果}
+    \subsection{DIDの意義と期待される結果}
     DID分析の結果、$\beta_{3}$の推定値が正で有意であれば、紛争が紛争関連サブレディットの投稿数を有意に増加させたことを意味する。これにより、紛争がReddit上の議論活性化に与える直接的な影響を実証的に評価することが可能となる。
 
-    また、対照群サブレディットを使用することで、紛争以外の要因（例:一般的な投稿数の増減、システム的な変化など）が分析結果に与える影響を排除し、結果の信頼性を高めている点が本研究の強みである。
+    また、対照群サブレディットを使用することで、紛争以外の要因（例:一般的な投稿数の増減、システム的な変化など）が分析結果に与える影響を排除し、結果の信頼性を高める。
 
     \section{感情分析とVADERスコアの時系列変化}
 
-    \subsection*{VADERの仕組みとその意義}
+    \subsection{VADERの仕組みとその意義}
     感情分析には、VADER（Valence Aware Dictionary and sEntiment Reasoner）を使用した。VADERは、ソーシャルメディアのような非構造化テキストに適した辞書ベースの感情分析ツールであり、短文、スラング、絵文字、強調表現（例:「!!!」「VERY」）などを含む多様な文脈を効果的に処理できるよう設計されている。
 
     VADERのアルゴリズムは、辞書に基づくアプローチを採用しており、単語やフレーズに事前に割り当てられたセンチメントスコア（ポジティブ、ネガティブ、中立）を元に、文章全体のセンチメントスコアを計算する。この辞書は、人間の評価者がラベル付けを行ったデータセットに基づいて構築されており、特にソーシャルメディアやニュースの文脈での利用を想定して作成されている。
 
-    VADERが広く利用される理由は以下の通りである:
-    \begin{itemize}
-        \item ソーシャルメディア特有のスラングや絵文字、文脈的な意味を考慮できる。
-        \item ポジティブ、ネガティブ、ニュートラルのスコアだけでなく、総合的な「コンパウンドスコア」を提供し、文全体の感情を包括的に評価可能。
-        \item Pythonライブラリに統合されており、高速かつ簡便な処理が可能。
-    \end{itemize}
+    VADERが広く利用される理由は三つある。第一に、ソーシャルメディア特有のスラングや絵文字、文脈的な意味を考慮できる点が挙げられる。これにより、従来の感情分析手法が見落としがちなソーシャルメディア特有の言語表現にも対応可能である。第二に、ポジティブ、ネガティブ、ニュートラルといったスコアに加えて、総合的な「コンパウンドスコア」を提供することで、文全体の感情を包括的に評価できる点が特長である。最後に、Pythonライブラリに統合されているため、高速かつ簡便な処理が可能であり、実用性が高い。このように、VADERはソーシャルメディアにおける感情分析において非常に有用なツールとなっている。
 
     今回の分析においてVADERを使用する意義は、Reddit投稿が一般的な形式的文章とは異なり、インフォーマルで感情的な表現が多く含まれることにある。VADERは、これらの特徴を考慮した感情分析が可能であり、紛争前後における投稿者の感情的な反応を効果的に捉えるツールとして最適である。
 
-    \subsection*{紛争前後の感情変化の分析とDIDの必要性}
+    \subsection{紛争前後の感情変化の分析とDIDの必要性}
     VADERスコア（ポジティブ、ネガティブ、中立）を日次で集計し、センチメントスコアの変化を紛争前後で比較した。また、センチメントスコアの変化をより定量的に評価するため、DID（差分の差分）分析を適用した。
 
-    DID分析の採用理由は以下の通り:
-    \begin{enumerate}
-        \item 因果関係の識別:
-            単に紛争関連サブレディット内のスコアを比較するだけでは、紛争の影響以外の要因（例:一般的な季節変動やイベント）によるスコア変動が結果に影響する可能性がある。DID分析は、対照群（非紛争関連サブレディット）と比較することで、紛争そのものがセンチメントスコアに与えた影響を識別できる。
-        \item 純粋な介入効果の抽出:
-            紛争前後での処置群（紛争関連サブレディット）のセンチメントスコア変化と、対照群の変化を比較することで、紛争がセンチメントスコアに与えた純粋な影響を明らかにできる。
-    \end{enumerate}
+    DID分析を採用した理由は二つある。第一に、因果関係を識別するためである。紛争関連サブレディット内のスコアを単に比較するだけでは、紛争の影響以外の要因、例えば一般的な季節変動やイベントによるスコア変動が結果に影響を及ぼす可能性がある。この点でDID分析は、対照群（非紛争関連サブレディット）と比較することで、紛争そのものがセンチメントスコアに与えた影響を識別するための適切な方法となる。
+    
+    第二に、純粋な介入効果を抽出するためである。DID分析は、紛争前後での処置群（紛争関連サブレディット）のセンチメントスコア変化と、対照群の変化を比較することで、紛争がセンチメントスコアに与えた純粋な影響を明らかにすることができる。このように、DID分析は本研究の目的において重要な役割を果たす手法である。
 
-    DID分析で使用したモデルは以下の通り:
+    DID分析では、以下の回帰式を使用した。
     \begin{equation}
         Sentiment_{it} = \beta_{0} + \beta_{1}*Treatment_{i} + \beta_{2}*Post_{t} + \beta_{3}*(Treatment_{i} * Post_{t}) + \epsilon_{it}
     \end{equation}
 
-    ここで、
+    この回帰式において、各パラメーターは以下のような意味を持つ。
     \begin{itemize}
         \item $Sentiment_{it}$:日次VADERセンチメントスコア（ポジティブ、ネガティブ、またはコンパウンドスコア）
         \item $Treatment_{i}$:紛争関連サブレディットであるか否か（1=処置群、0=対照群）
@@ -248,35 +227,28 @@
         \item $\beta_{3}$:紛争がセンチメントスコアに与える影響を表す推定値
     \end{itemize}
 
-    \subsection*{分析結果の意義}
+    \subsection{分析結果の意義}
     DID分析により、紛争勃発後、紛争関連サブレディットでセンチメントスコアがネガティブにシフトし、対照群では顕著な変化が見られないことを示す。これにより、紛争がオンライン議論に与える感情的影響を明確にし、Reddit上の議論のダイナミクスを深く理解するための基盤を提供する。
 
     \section{トピックモデリングによるテーマ分析}
     投稿内容のテーマを分析するため、LDA（潜在ディリクレ配分）ではなく、動的トピックモデリング（Dynamic Topic Modeling, DTM）を採用した。この手法は、議論のトピックが時間とともにどのように変遷するかを詳細に分析することを可能にする。
 
-    DTMの実施手順は以下の通り:
-    \begin{enumerate}
-        \item テキストの前処理（トークン化、ストップワード除去、ステミング）
-        \item 文書-単語行列の作成
-        \item 時系列データに基づくDTMモデルの構築
-        \item 各週ごとの主要トピックとその割合の推定
-        \item トピックごとの時間的推移を可視化
-    \end{enumerate}
+    DTMの実施手順は次の通りである。まず、テキストの前処理を行い、トークン化、ストップワードの除去、ステミングを実施する。その後、文書-単語行列を作成し、時系列データに基づいてDTMモデルを構築する。このモデルを用いて、各週ごとの主要トピックとその割合を推定し、最後にトピックごとの時間的推移を可視化する。これらの手順を通じて、DTMの分析が進められる。
 
     \section{分析手法の有効性}
     本研究で採用した分析手法は、Redditにおけるユーザーの反応を多角的に捉えることを目的としている。特に投稿数や感情の変化を定量的に分析する手法と、投稿内容の詳細な特徴を捉える方法を組み合わせることで、データ駆動型の分析と実証的な議論を可能にしている。それぞれの手法の有効性について以下に論じる。
 
     \subsection{投稿数およびセンチメントスコアの変化に関する定量的分析の有効性}
-    定量的分析は、大規模データセットの全体的な傾向を把握し、外部要因（例: 紛争勃発）がReddit上の議論に与える影響を評価する上で有効である。本研究では、投稿数とセンチメントスコアの変化を時系列で分析し、さらにDID（差分の差分）分析を用いて因果関係を特定している。
+    定量的分析は、大規模データセットの全体的な傾向を把握し、外部要因（例: 紛争勃発）がReddit上の議論に与える影響を評価する上で有効である。本研究では、投稿数とセンチメントスコアの変化を時系列で分析し、さらにDID（差分の差分）分析を用いて因果関係を特定する。
 
-    DID分析は、自然実験的状況下での因果推論を行うために適した手法であり、紛争関連サブレディット（処置群）と非関連サブレディット（対照群）間の変化を比較することで、紛争が議論活性化や感情表現に与える影響を厳密に評価できる。この手法にサブサンプリングを組み合わせることで、処置群と対照群のデータ数の不均衡を調整し、分析結果の公平性と信頼性を高めている。
+    DID分析は、自然実験的状況下での因果推論を行うのに適した手法であり、紛争関連サブレディット（処置群）と非関連サブレディット（対照群）間の変化を比較することで、紛争が議論活性化や感情表現に与える影響を厳密に評価できる。この手法にサブサンプリングを組み合わせることで、処置群と対照群のデータ数の不均衡を調整し、分析結果の公平性と信頼性を高めることができる。
 
     また、センチメントスコアにはVADER（Valence Aware Dictionary and sEntiment Reasoner）を使用した。VADERはSNSデータに特化して設計されており、スラング、絵文字、文脈依存の表現を効果的に処理する機能を持つ。これにより、投稿のポジティブ、ネガティブ、中立的な感情の傾向を時間軸に沿って分析することが可能となり、重要なイベントに対するユーザーの感情的反応を定量的に評価することができる。
 
     \subsection{投稿内容の分析に関するアプローチの有効性}
     本研究では、感情分析を補完する形で、投稿内容に含まれる具体的なトピックやテーマの変遷を捉えるため、動的トピックモデリング（DTM）を採用した。この手法は、投稿データをトピックに分解し、時間の経過とともに議論の焦点がどのように移行するかを詳細に明らかにする。
 
-    DTMの利点は、テーマの変化を定量化しつつ、データ駆動型の方法で隠れた構造を発見できる点にある。これにより、紛争に関連する議論が「戦闘」「人道的危機」「国際的対応」といったテーマから、議論のルールや行動規範のようなメタレベルの議論へと移行する過程を捉えることができた。
+    DTMの利点は、テーマの変化を定量化しつつ、データ駆動型の方法で隠れた構造を発見できる点にある。これにより、紛争に関連する議論が「戦闘」「人道的危機」「国際的対応」といったテーマから、議論のルールや行動規範のようなメタレベルの議論へと移行する過程を捉えることができる。
 
     \section{分析手法の限界と課題}
     本研究で採用した分析手法にはいくつかの限界が存在する。以下にそれらを列挙し、今後の研究に向けた改善点を提案する。
