Fix format of cover

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -32,13 +32,16 @@
         \vspace{20mm}
         {\Large\noindent 2024年度 卒業論文}\\
         \vspace{40mm}
-        {\huge\noindent\textbf{SNSにおける世論形成と紛争に関するReddit投稿分析}}\\
+        {\huge\noindent\textbf{SNSにおける世論形成と紛争に関する\\
+        Reddit投稿分析}}\\
         \medskip
         {\huge\noindent\textbf{ーイスラエルによるレバノン侵攻を例にー}}\\
         \vspace{\baselineskip}
         \vspace{40mm}
-
-        {\Large\noindent \vspace{\baselineskip} 指導教員 \CID{8443}田智子 \\ \vspace{\baselineskip} グローバル地域文化学部 アジア・太平洋コース \\ \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\ }
+    
+        {\Large\noindent グローバル地域文化学部 アジア・太平洋コース \\ 
+        \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\
+        \vspace{\baselineskip} 指導教員: \CID{8443}田智子 }
         \vspace{40mm}
     \end{center}
 
