--- a/docs/main.tex
+++ b/docs/main.tex
@@ -253,18 +253,23 @@
 
     DTMの利点は、テーマの変化を定量化しつつ、データ駆動型の方法で隠れた構造を発見できる点にある。これにより、紛争に関連する議論が「戦闘」「人道的危機」「国際的対応」といったテーマから、議論のルールや行動規範のようなメタレベルの議論へと移行する過程を捉えることができる。
 
-    \section{分析手法の限界と課題}
-    本研究で採用した分析手法にはいくつかの限界が存在する。以下にそれらを列挙し、今後の研究に向けた改善点を提案する。
-
+    \section{分析手法の限界}
+    本研究で採用した分析手法にはいくつかの限界が存在する。
+    
     \subsection{データ収集の限界}
-    Reddit上の投稿が全て人間によるものではなく、一部にはボットやスパム投稿が含まれる可能性がある。この問題に対処するため、投稿パターンやユーザー履歴を基にボットを検出・除外するアルゴリズムの実装が必要である。また、今回の分析ではRedditの特定のサブレディットに焦点を当てたため、他のSNSや他のサブレディットのデータを取り入れることで、より包括的な結果が得られる可能性がある。
-
+    Reddit上の投稿が全て人間によるものではなく、一部にはボットやスパム投稿が含まれる可能性がある。この問題に対処するためには、投稿パターンやユーザー履歴を基にボットを検出・除外するアルゴリズムの実装が必要であるかもしれない。また、今回の分析ではRedditの特定のサブレディットに焦点を当てたため、他のSNSや他のサブレディットのデータを取り入れることで、より包括的な結果が得られる可能性がある。
+    
+    さらに、データ収集においては、Reddit APIの仕様や制限に依存しているため、潜在的なデータ欠損や取得漏れが発生する可能性がある。特に、削除された投稿やコメント、特定のユーザーによる非公開設定など、分析対象から除外されるデータが存在することが問題となる。また、サブレディットの選定には一定の偏りが含まれる可能性があり、議論の内容や性質が投稿者の意見や視点に大きく左右されるため、結果の解釈には注意が必要である。
+    
     \subsection{感情分析の限界}
-    感情分析に使用したVADERはSNSデータに適している一方で、文脈や文化的な違いに起因するニュアンスの違いを完全には捉えられない可能性がある。特に、皮肉や隠喩、暗喩の多用がセンチメントスコアの精度に影響を与える。これに対処するため、一部のデータについて人間のコーディングによる検証を行い、機械的な分析結果の補完を検討する必要がある。
+    感情分析に使用したVADERはSNSデータに適している一方で、文脈や文化的な違いに起因するニュアンスの違いを完全には捉えられない可能性がある。特に、皮肉や隠喩、暗喩の多用がセンチメントスコアの精度に影響を与える。この問題に対処するため、一部のデータについて人間のコーディングによる検証を行い、機械的な分析結果を補完する必要がある。
+    
+    また、VADERの辞書ベースのアルゴリズムでは、高度な文脈依存の表現を完全に捉えることは難しい。例えば、同じ単語やフレーズが異なる文脈で異なる意味を持つ場合、その違いを適切に評価できない可能性がある。これにより、特定の投稿における感情的なニュアンスが十分に反映されない場合がある。
+    
+    \subsection{DID分析の限界}
+    DID分析においては、平行トレンド仮定が完全に満たされていない場合、推定結果に歪みが生じる可能性がある。特に、紛争関連サブレディットと非関連サブレディットの間での投稿数の変動要因が本質的に異なる場合、この仮定が崩れることが懸念される。さらに、DIDモデルの適用に際して処置群と対照群のデータ数に不均衡があることも分析結果に影響を与える可能性がある。
 
-    \subsection{結果の一般化可能性の制約}
-    本研究で得られた知見は、イスラエル・レバノン紛争という特定の文脈に基づいており、全ての国際紛争に適用できるわけではない。結果の一般化可能性を評価するため、ウクライナ紛争や南シナ海問題など他の紛争事例を対象に同様の分析を行い、比較研究を進めることが今後の課題となる。
-
+    \subsection{まとめ}
     本研究は、投稿数とセンチメントスコアの変化をDID分析で因果推論し、動的トピックモデリングでテーマの移り変わりを追跡することで、SNSにおけるユーザー反応の複雑な構造を明らかにするための重要な一歩を示している。一方で、限界点に対処し、さらなる改善を加えることで、より信頼性の高い結論を導き出すことが可能となる。
 
     \section{倫理的配慮}
