get rid of ethical considerations

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -272,29 +272,12 @@
     \subsection{まとめ}
     本研究は、投稿数とセンチメントスコアの変化をDID分析で因果推論し、動的トピックモデリングでテーマの移り変わりを追跡することで、SNSにおけるユーザー反応の複雑な構造を明らかにするための重要な一歩を示している。一方で、限界点に対処し、さらなる改善を加えることで、より信頼性の高い結論を導き出すことが可能となる。
 
-    \section{倫理的配慮}
-    オンラインデータの収集と分析には特有の倫理的問題が存在するため、以下の点に特に注意を払う:
-
-    \begin{itemize}
-        \item プライバシー保護:個人を特定できる情報は全て匿名化し、分析結果の公表時にも個人が特定されないよう細心の注意を払う。
-
-        \item インフォームドコンセント:Redditの利用規約に基づき、公開されている投稿のみを分析対象とする。非公開のサブレディットやプライベートメッセージは対象外とする。
-
-        \item データの安全な管理:収集したデータは暗号化し、安全なサーバーで保管する。研究終了後は適切な方法でデータを破棄する。
-
-        \item 公平性の確保:特定の政治的立場や意見に偏らないよう、分析過程では中立性を保つ。結果の解釈においても、多角的な視点を維持する。
-
-        \item 社会的影響の考慮:研究結果が特定のグループや個人を誹謗中傷したり、不当に不利益を与えたりすることがないよう十分に配慮する。
-    \end{itemize}
-
-    これらの倫理的配慮は、研究の全過程を通じて徹底され、必要に応じて大学の倫理委員会の審査を受ける。研究者は常に倫理的な観点から研究を進め、データの収集・分析・公表において社会的責任を果たすことを心がける。
-
     \section{まとめ}
     本章では、Redditにおける投稿データを用いたデータ収集および分析手法について詳細に論じた。本研究では、Pushshift APIを用いた効率的なデータ収集手法を採用し、投稿数の変化、センチメントスコアの推移、議論のトピックの変遷を明らかにするための多様な分析手法を組み合わせたアプローチを採用している。
 
     特に、投稿数の時系列分析、VADERを用いた感情分析、動的トピックモデリング（DTM）によるテーマの変遷分析などを組み合わせることで、単なる投稿数の増減だけでなく、議論の焦点や感情的な傾向、そしてこれらが時間の経過とともにどのように推移するかを総合的に把握することが可能となる。これらの手法は、紛争や政治的イベントに対するユーザーの反応をより深く理解するための有効な手段であるといえる。
 
-    また、本研究のデータ収集や分析において直面する限界と、それに対する具体的な対策についても議論した。例えば、処置群と対照群間のデータ数の不均衡に対応するためのサブサンプリングや、感情分析における文化的・文脈的な違いを考慮するための補完的な手法の必要性を指摘した。さらに、オンラインデータの扱いにおける倫理的配慮に関しても、特定のユーザーやコミュニティに害を及ぼさないようにするための指針を明示した。
+    また、本研究のデータ収集や分析において直面する限界と、それに対する具体的な対策についても議論した。例えば、処置群と対照群間のデータ数の不均衡に対応するためのサブサンプリングや、感情分析における文化的・文脈的な違いを考慮するための補完的な手法の必要性を指摘した。
 
     次章では、これらの手法に基づいて得られた実際の分析結果を提示する。具体的には、ハマス・イスラエル紛争に関連するReddit上での議論がどのように変化し、どのような特徴を持つのかを詳細に検討する。この分析結果は、SNSが国際紛争における世論形成に与える影響を理解するための重要な知見を提供するとともに、デジタル空間における議論の動態を捉える新たな視点を示すものである。
 
