Improve how to utilize figure and graph

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -291,7 +291,7 @@
     \section{投稿数の変化}
     10月1日のイスラエルによるレバノン侵攻を境に、投稿数にどのような変化が生じたかをOLS回帰分析により検証した。その結果、侵攻後の投稿数において統計的に有意な増加が観察された。特に、群間の交互作用効果（\textit{interaction}）が有意であり（$p = 0.032$）、侵攻後の特定サブレディットにおける投稿数の増加が確認された。
 
-    表\ref{tab:ols_results}は回帰結果を示している。
+    表\ref{tab:ols_counts_results}は回帰結果を示している。
 
     \begin{table}[H]
         \centering
@@ -308,7 +308,7 @@
         \end{tabular}
         }
         \caption{投稿数の変化に関するOLS回帰結果}
-        \label{tab:ols_results}
+        \label{tab:ols_counts_results}
     \end{table}
 
     主な観測結果としては以下の通りである。定数項（\textit{Intercept}）については、基本的な投稿数の平均が約143.92件であり、この結果は統計的に有意であった（$p < 0.001$）。群の効果（\textit{group}）に関しては、群間の差異は統計的に有意ではないと示された（$p = 0.319$）。次に、侵攻後の効果（\textit{post\_treatment}））では、全体的な投稿数の減少傾向が観察されたものの、この結果は有意ではなかった（$p = 0.234$）。一方で、交互作用効果（\textit{interaction}）については、侵攻後の特定群において投稿数が約55.67件増加しており、この効果は統計的に有意であることが確認された（$p = 0.032$）。
@@ -321,7 +321,7 @@
         \label{fig:submissions_comments_trends}
     \end{figure}
 
-    以上の結果は、侵攻後に特定のサブレディットにおいて投稿数が有意に増加したことを示している。この変化は表\ref{tab:ols_results}における交互作用効果によって裏付けられている。
+    以上の結果は、侵攻後に特定のサブレディットにおいて投稿数が有意に増加したことを示している。この変化は表\ref{tab:ols_counts_results}における交互作用効果によって裏付けられている。
 
     \section{センチメントスコアの変化: WLS分析結果}
     センチメントスコアについても、侵攻前後の変化を分析した。Table~\ref{tab:wls_results}に示すWLS回帰分析の結果によると、対象サブレディットにおけるセンチメントスコアは、全体的にポジティブな方向にシフトしていることが確認された。ただし、侵攻後全体の変化（\textit{post\_treatment}）は統計的に有意ではないが、交互作用効果（\textit{interaction}）は統計的に有意であった。
@@ -331,8 +331,6 @@
 
     \begin{table}[H]
     \centering
-    \caption{WLS Regression Results for Sentiment Score}
-    \label{tab:wls_results}
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|l|c|c|c|c|c|c|}
         \hline
@@ -345,50 +343,34 @@
         \hline
     \end{tabular}
     }
+    \caption{センチメントスコアの変化に関するWLS回帰結果}
+    \label{tab:wls_results}
     \end{table}
 
-    \subsection*{主要な観測結果}
-    \begin{itemize}
-        \item 定数項（Intercept）: 基本的なセンチメントスコアの平均値（侵攻前の水準）は0.1940で、統計的に有意（$p < 0.001$）。
-        \item treatment（侵攻の影響）: センチメントスコアに対して-0.3342の減少効果を持つ。この変数は統計的に有意（$p < 0.001$）。
-        \item post\_treatment（侵攻後の全体的な変化）: 侵攻後の全体的な変化は0.0049で、統計的に有意ではない（$p = 0.715$）。
-        \item interaction（侵攻後の特定グループへの影響）: 侵攻後の特定条件下では、センチメントスコアが0.0528増加。この変化は統計的に有意（$p < 0.001$）。
-    \end{itemize}
-
-    \subsection*{観察された傾向}
+    主要な観測結果は以下の通りである。まず、定数項（\textit{Intercept}）は基本的なセンチメントスコアの平均値を示し、その値は0.1940であり、統計的に有意であった（$p < 0.001$）。次に、\textit{treatment}（侵攻の影響）はセンチメントスコアに対して-0.3342の減少効果を持ち、この変数も統計的に有意であった（$p < 0.001$）。また、\textit{post\_treatment}（侵攻後の全体的な変化）は0.0049の変化を示したが、この結果は統計的に有意ではなかった（$p = 0.715$）。最後に、\textit{interaction}（侵攻後の特定グループへの影響）は、特定条件下でセンチメントスコアが0.0528増加することを示しており、この変化は統計的に有意であった（$p < 0.001$）。
+    
     センチメントスコアの全体的な変化は小さいが、交互作用効果が統計的に有意であり、侵攻直後の特定の条件下ではポジティブな方向にシフトしている。
 
     \section{トピックモデリング(DTM)による週次分析}
 
     週単位で収集した投稿を基に動的トピックモデリング（DTM）を適用し、議論の主要トピックの変化を分析した。本分析では、各トピックが示す具体的な内容（テーマ）と、その割合の変遷に着目した。以下に主なトピックの内容とその割合の変遷について説明する。
 
-    \subsection*{トピックの分類と内容}
-    DTMの結果、以下の3つのトピックが抽出された。それぞれが異なるテーマを反映している。
+    \subsection{トピックの分類と内容}
+    DTMの結果、3つのトピックが抽出され、それぞれが異なるテーマを反映している。最初のトピックは「紛争と軍事行動」に関連しており、主に軍事行動、武装組織（例: ハマスやヒズボラ）、および民間人への影響を扱っている。このトピックに関連する用語としては、\textit{hamas, gaza, idf, attack, war, civilians} などが挙げられる。
+    
+    次に、「歴史的および政治的議論」を反映するトピックが抽出された。このトピックは、土地問題、ユダヤ人とパレスチナ人の歴史的対立、国家形成に関する議論を特徴としており、関連する用語には \textit{land, jewish, palestinians, state, history, colonization} が含まれる。
+    
+    最後に、3つ目のトピックは「規則・メタ的議論」を扱っており、Reddit内部の規則、コメントの管理、および投稿の削除に関するメタ的な議論を示している。このトピックに関連する用語には、\textit{https, please, rule, action, comments, subreddit} などがある。
 
-    \begin{itemize}
-        \item トピック1: 紛争と軍事行動 
-        \begin{itemize}
-            \item 用語例: \textit{hamas, gaza, idf, attack, war, civilians}  
-            \item このトピックは、軍事行動、武装組織（ハマスやヒズボラ）、および民間人への影響に関連している。
-        \end{itemize}
-        \item トピック2: 歴史的および政治的議論  
-        \begin{itemize}
-            \item 用語例: \textit{land, jewish, palestinians, state, history, colonization}  
-            \item このトピックは、土地問題、ユダヤ人とパレスチナ人の歴史的対立、国家形成に関する議論を反映している。
-        \end{itemize}
-        \item トピック3: 規則・メタ的議論  
-        \begin{itemize}
-            \item 用語例: \textit{https, please, rule, action, comments, subreddit}  
-            \item このトピックは、Reddit内部の規則、コメントの管理、投稿の削除に関するメタ的な議論を示している。
-        \end{itemize}
-    \end{itemize}
-
-    \subsection*{トピックの割合の変遷}
-    各週におけるトピックの割合の変遷を以下に示す。
+    \subsection{トピックの変遷について}
+    トピックの割合は時間の経過とともに変遷している（表\ref{tab:topic_ratios}を参照）。初期段階（2024年7月から9月）では、「歴史的および政治的議論（トピック2）」が主流であり、議論の焦点は過去の対立や土地問題に集中していた。具体的には、2024年7月22日から7月28日の週において、トピック2が45\%を占めていたことが確認されている。
+    
+    侵攻直後（2024年10月7日から10月13日）には、「紛争と軍事行動（トピック1）」が全体の50\%を占めるまでに増加し、侵攻や軍事的イベントへの注目が大幅に高まった。この週のデータでは、トピック1の割合が最大となり、他のトピックに対する優位性が明らかである。
+    
+    その後、後期（2024年11月以降）になると、「規則・メタ的議論（トピック3）」が35\%に増加し、プラットフォーム内部での投稿や規則に対する議論が活発化する傾向が見られた。例えば、2024年11月4日から11月10日の週では、トピック3の割合が35\%に達し、これまでの期間と比較して顕著な増加を示している。
 
     \begin{table}[H]
     \centering
-    \caption{各週におけるトピックの割合}
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|l|c|c|c|}
         \hline
@@ -400,19 +382,11 @@
         \hline
     \end{tabular}
     }
+    \caption{各週におけるトピックの割合}
     \label{tab:topic_ratios}
-    \end{table}
+    \end{table}    
 
-    \subsection*{観察されたトレンド}
-    トピックの割合は以下のように変遷している:
-    \begin{itemize}
-        \item 初期段階（2024年7月～9月）: 「歴史的および政治的議論（トピック2）」が主流で、議論の焦点が過去の対立や土地問題に集中していた。
-        \item 侵攻直後（2024年10月7日～10月13日）: 「紛争と軍事行動（トピック1）」が50\%に達し、侵攻や軍事的イベントへの注目が大幅に増加。
-        \item 後期（2024年11月以降）: 「規則・メタ的議論（トピック3）」が35\%に増加し、プラットフォーム内部での投稿や規則に対する議論が活発化。
-    \end{itemize}
-
-    \subsection*{図示されたトピックの変遷}
-    以下に各週のトピック出現頻度の推移を図示する。
+    また、図\ref{fig:topic_trends}は各週のトピック出現頻度の推移を示している。
 
     \begin{figure}[H]
         \centering
