FIx analysis section to analysis chapter

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -395,11 +395,11 @@
         \label{fig:topic_trends}
     \end{figure}
 
-    \section{分析結果に対する考察}
+    \chapter{分析結果に対する考察}
 
     本研究は、2024年10月1日のイスラエルによるレバノン侵攻がReddit上の議論やユーザーの反応に与えた影響を明らかにし、SNSが国際紛争に果たす役割を考察するものである。本章では、「はじめに」で提示した仮説と分析結果を関連付けつつ、投稿数、感情的傾向、トピックの変遷を統合的に議論する。
 
-    \subsection{SNSとデジタル公共圏の形成}
+    \section{SNSとデジタル公共圏の形成}
     分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
     投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\cite{habermas1989structural}に照らして考えると、以下の特徴が明らかとなる:
@@ -411,7 +411,7 @@
 
     ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\cite{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
 
-    \subsection{感情的傾向の変化と情動の役割}
+    \section{感情的傾向の変化と情動の役割}
     センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、以下の要素が浮かび上がる:
 
     \begin{itemize}
@@ -421,7 +421,7 @@
 
     これらの結果は、紛争直後のSNSが、情報共有だけでなく、情動的な安定化装置としても機能することを示唆している。
 
-    \subsection{トピックの変遷と議論の多層性}
+    \section{トピックの変遷と議論の多層性}
     仮説3では「議論が戦闘や人道危機から国際支援や解決策へと焦点を移す」としたが、トピックモデリングの結果、実際には「軍事行動」や「人道危機」から「規則」や「投稿削除」に議論が移行したことが確認された。これにより仮説3の一部は否定されるが、議論の焦点が時間の経過とともに変化するという主張は支持された。
 
     \begin{itemize}
@@ -431,7 +431,7 @@
 
     これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである。
 
-    \subsection{包括的結論: 仮説と結果の統合}
+    \section{包括的結論: 仮説と結果の統合}
     本研究の分析結果は、SNSが国際紛争において以下のような多層的な役割を果たすことを示した:
     \begin{enumerate}
         \item 新規ユーザーの流入が議論の内容と感情的トーンに与える影響を通じて、デジタル公共圏を再編する。
