Get rid of usage of itemizing

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -402,55 +402,47 @@
     \section{SNSとデジタル公共圏の形成}
     分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
-    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\cite{habermas1989structural}に照らして考えると、以下の特徴が明らかとなる:
+    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\cite{habermas1989structural}に照らして考えると、いくつかの特徴が明らかになる。
 
-    \begin{itemize}
-        \item \textbf{議論の活性化と新規ユーザーの流入}: 投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後の新規ユーザーの流入が議論を活性化させ、ネガティブなセンチメントを緩和した可能性が高い。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
-        \item \textbf{情報の迅速な共有}: 紛争関連サブレディットにおける投稿数の急増は、情報が迅速に共有されると同時に、議論が特定のテーマに集中する特徴を持つ。これは、公共圏のオンライン移行が危機的状況で特に顕著であることを示唆する。
-    \end{itemize}
-
+    まず、議論の活性化と新規ユーザーの流入が挙げられる。投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後に新規ユーザーが流入し、議論を活性化させた可能性が高い。これにより、ネガティブなセンチメントが緩和される効果が生じたと考えられる。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
+    
+    次に、情報の迅速な共有が特徴として挙げられる。紛争関連サブレディットにおける投稿数の急増は、情報が迅速に共有されると同時に、議論が特定のテーマに集中することを示している。これは、公共圏がオンラインに移行する際、特に危機的状況でその傾向が顕著になることを示唆している。
+    
     ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\cite{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
 
     \section{感情的傾向の変化と情動の役割}
-    センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、以下の要素が浮かび上がる:
-
-    \begin{itemize}
-        \item \textbf{情動的緩衝材としての新規ユーザー}: 新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性がある。この現象は、デジタル空間における情動の伝播（emotional contagion）\cite{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
-        \item \textbf{文化的要因}: センチメントスコアの変化には、紛争地域外のユーザーが主導する人道的支援や平和的解決を求める声が反映されている可能性がある。SNSの国際的な性質が、このような文化的多様性を議論に反映させている。
-    \end{itemize}
+    センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、いくつかの要素が浮かび上がる。
+    
+    まず、新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性が考えられる。この現象は、デジタル空間における情動の伝播（emotional contagion）\cite{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
+    
+    さらに、センチメントスコアの変化には文化的要因が関与している可能性がある。具体的には、紛争地域外のユーザーが主導する人道的支援や平和的解決を求める声が反映されていると考えられる。このような変化は、SNSが持つ国際的な性質が文化的多様性を議論に反映させる力を持つことを示している。
 
     これらの結果は、紛争直後のSNSが、情報共有だけでなく、情動的な安定化装置としても機能することを示唆している。
 
     \section{トピックの変遷と議論の多層性}
-    仮説3では「議論が戦闘や人道危機から国際支援や解決策へと焦点を移す」としたが、トピックモデリングの結果、実際には「軍事行動」や「人道危機」から「規則」や「投稿削除」に議論が移行したことが確認された。これにより仮説3の一部は否定されるが、議論の焦点が時間の経過とともに変化するという主張は支持された。
-
-    \begin{itemize}
-        \item \textbf{急性期の集中化}: 紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中した。この現象は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場となることを示している。
-        \item \textbf{後期のメタ的議論への移行}: 時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\cite{sunstein2001republic}や分極化が進行した可能性が示唆される。この移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場ともなっていることを意味する。
-    \end{itemize}
+    仮説3では「議論が戦闘や人道危機から国際支援や解決策へと焦点を移す」としていたが、トピックモデリングの結果、実際には「軍事行動」や「人道危機」から「規則」や「投稿削除」へ議論が移行したことが確認された。これにより、仮説3の一部は否定されるが、議論の焦点が時間の経過とともに変化するという主張は支持された。
+    
+    紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中していた。この急性期における議論の集中化は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場として機能することを示している。
+    
+    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\cite{sunstein2001republic}や分極化が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している。
 
     これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである。
 
     \section{包括的結論: 仮説と結果の統合}
-    本研究の分析結果は、SNSが国際紛争において以下のような多層的な役割を果たすことを示した:
-    \begin{enumerate}
-        \item 新規ユーザーの流入が議論の内容と感情的トーンに与える影響を通じて、デジタル公共圏を再編する。
-        \item 紛争急性期における情報共有と議論の集中化が、リアルタイムの社会的合意形成を可能にする。
-        \item 時間の経過とともに議論疲れや分極化が進行し、SNSが自己批判的文化を育む場となる。
-    \end{enumerate}
+    本研究の分析結果は、SNSが国際紛争において多層的な役割を果たすことを示している。まず、新規ユーザーの流入が議論の内容と感情的トーンに影響を与えることで、デジタル公共圏を再編する役割を果たしていることが明らかになった。また、紛争の急性期において、情報共有と議論の集中化が進み、SNSがリアルタイムでの社会的合意形成を可能にする場として機能していることが確認された。
+    
+    さらに、時間の経過とともに議論疲れや分極化が進行し、SNSが単なる情報共有の場にとどまらず、自己批判的な文化を育む場としての役割を果たしていることが示唆された。これらの観点から、SNSは国際紛争の動態において多面的な影響を及ぼす重要なプラットフォームであると結論付けられる。
 
     ただし、これらの結論はReddit上の観察結果に基づくものであり、他のSNSや異なる文化圏では異なる動態が見られる可能性がある。本研究の結果を一般化することは慎重を要する一方で、SNSを用いた紛争対応策の設計や運営における一つの出発点として意義を持つ。
 
     \chapter{まとめ}
-
+    
     \section{研究の要約}
-    本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、センチメントスコアの推移、トピックの変遷という3つの観点から、多角的なデータ分析を行った結果、以下の知見が得られた:
-
-    \begin{enumerate}
-        \item 投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示し、SNSがデジタル公共圏として機能する一端を明らかにした。
-        \item センチメントスコアの分析から、紛争直後に議論がポジティブな方向へシフトする現象が確認された。この変化は、新規ユーザーの中立的または肯定的な意見の流入に起因すると考えられる。
-        \item 動的トピックモデリング（DTM）の結果、議論の焦点が「軍事行動」や「人道危機」から「規則」や「投稿削除」といったメタ的議論へと移行する傾向が観察された。
-    \end{enumerate}
+    本研究は、2024年10月1日のイスラエルによるレバノン侵攻を契機として、Reddit上における議論の変遷を分析し、SNSが国際紛争に果たす役割を明らかにすることを目的として実施された。投稿数の変化、センチメントスコアの推移、トピックの変遷という3つの観点から多角的なデータ分析を行った結果、以下の知見が得られた。
+    
+    まず、投稿数の急増は、新規ユーザーの流入や紛争関連情報の共有が活発化したことを示しており、SNSがデジタル公共圏として機能する一端を明らかにした。また、センチメントスコアの分析からは、紛争直後に議論がポジティブな方向へシフトする現象が確認された。この変化は、新規ユーザーによる中立的または肯定的な意見の流入が要因であると考えられる。
+    
+    さらに、動的トピックモデリング（DTM）の結果、議論の焦点が「軍事行動」や「人道危機」から「規則」や「投稿削除」といったメタ的議論へと移行する傾向が観察された。これらの知見は、SNSが紛争時における情報共有や議論の進化において重要な役割を果たしていることを示している。
 
     これらの結果は、Redditが単なる情報共有の場にとどまらず、ユーザー間の多層的な議論やプラットフォーム内部の文化的特徴が影響を及ぼすことを示している。
 
@@ -467,22 +459,14 @@
     本研究の分析期間は約3か月間であり、紛争の初期段階に焦点を当てている。これにより、議論が時間の経過とともにどのように発展し、沈静化するかについての包括的な理解には至っていない。今後の研究では、長期間のデータを収集し、議論の成長、疲弊、そして再構築のプロセスを時系列的に分析する必要がある。
 
     \section{研究結果の具体的な意義}
-    本研究で得られた知見は、SNSの活用や規制に関して以下の具体的な指針を提供する:
-
-    \begin{enumerate}
-        \item \textbf{紛争時の情報共有と世論形成の促進}:
-        紛争急性期における投稿数の急増とトピック集中化の観察結果は、SNSが迅速な情報共有とリアルタイムの世論形成を可能にする重要なツールであることを示している。政策立案者にとって、SNSを活用して国際社会の関心を喚起し、被害状況の可視化を図ることで、国際的な支援や介入を効果的に促進できる可能性がある。
-
-        \item \textbf{新規ユーザー流入による議論の多様化}:
-        本研究は、新規ユーザーの流入が議論のトーンやトピックに与える影響を示しており、これを活用して紛争地域外の声を集める仕組みを設計することで、議論の多様化と偏りの是正が期待できる。プラットフォーム運営者にとっては、議論が閉鎖的なエコーチェンバーに陥らないよう、アルゴリズムの調整が重要となる。
-
-        \item \textbf{議論疲れとメタ議論の抑制策}:
-        後期におけるメタ議論の増加と議論疲れの進行を踏まえ、プラットフォーム運営者は、議論の健全性を維持するためのモデレーション手法を見直す必要がある。たとえば、長期間続く議論には、新たな視点を提供するためのキュレーション機能や、議論の焦点を再設定する仕組みを導入することが効果的である。
+    本研究で得られた知見は、SNSの活用や規制に関して具体的な指針を提供するものである。まず、紛争急性期における投稿数の急増とトピック集中化の観察結果は、SNSが迅速な情報共有とリアルタイムの世論形成を可能にする重要なツールであることを示している。この点で政策立案者にとっては、SNSを活用して国際社会の関心を喚起し、被害状況の可視化を図ることで、国際的な支援や介入を効果的に促進する可能性がある。
     
-        \item \textbf{オンライン公共圏としてのSNSの設計}:
-        本研究の結果は、SNSがデジタル公共圏として機能する可能性を示唆している。一方で、公共圏の形成には、特定の視点が過剰に強調されないような設計が求められる。プラットフォーム運営者は、アルゴリズムの透明性を向上させ、多様な意見が均等に可視化されるような仕組みを開発するべきである。
-    \end{enumerate}
-
+    また、本研究は、新規ユーザーの流入が議論のトーンやトピックに与える影響を示しており、これを活用して紛争地域外の声を集める仕組みを設計することで、議論の多様化と偏りの是正が期待できる。この点でプラットフォーム運営者にとっては、議論が閉鎖的なエコーチェンバーに陥らないよう、アルゴリズムの調整が重要であることが示唆される。
+    
+    さらに、後期におけるメタ議論の増加と議論疲れの進行を踏まえ、プラットフォーム運営者は議論の健全性を維持するためのモデレーション手法を見直す必要がある。たとえば、長期間続く議論には、新たな視点を提供するためのキュレーション機能や、議論の焦点を再設定する仕組みを導入することが効果的であると考えられる。
+    
+    最後に、本研究の結果は、SNSがデジタル公共圏として機能する可能性を示唆している。一方で、公共圏の形成には、特定の視点が過剰に強調されないような設計が求められる。この点でプラットフォーム運営者は、アルゴリズムの透明性を向上させ、多様な意見が均等に可視化される仕組みを開発することが求められる。
+    
     \section{結論}
     本研究は、2024年のイスラエルによるレバノン侵攻を題材に、Redditにおける投稿データを分析することで、SNSが国際紛争において果たす役割とその限界を明らかにした。本研究の成果は、デジタル時代における公共圏の新たな形態を理解するための基盤を提供するとともに、SNS運営者や政策立案者がより健全で多様な議論環境を構築するための実践的な示唆を与えるものである。
 
